--- a/_sass/general/variables.scss
+++ b/_sass/general/variables.scss
@@ -12,7 +12,7 @@ $blue:              #1e92d4;
 
 // Typography
 $font_body:         "Soleil";
-$font_header:       "Futura PT";
+$font_header:       "futura-pt", "Futura PT";
 $font_size:         18px;
 $line_height:       1.5;
 $font_size--mobile: 15px;
