--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,2 +1,3 @@
-<script src="{{ "/assets/js/fastclick.js" | prepend: site.baseurl }}"></script>
-<script src="{{ "/assets/js/script.js" | prepend: site.baseurl }}"></script>
+<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+<script src="/assets/js/fastclick.js"></script>
+<script src="/assets/js/script.js"></script>
