--- a/_sass/modules/heroText.scss
+++ b/_sass/modules/heroText.scss
@@ -36,7 +36,8 @@
 .m-heroText-paragraph {
 	font-size: 1.5rem;
 	line-height: 2rem;
-	margin-bottom: -1px;
+	position: relative;
+	top: 1px;
 	a {
 		border-width: 3px;
 	}
@@ -82,6 +83,9 @@
 	.m-heroText-paragraph {
 		font-size: 1rem;
 		line-height: $rhythm;
+	}
+	.m-heroText-hello {
+		margin-left: 0.5rem;
 	}
 	.m-heroText-hello--aLittleBit {
 		margin-left: $rhythm / 2;
