restructuring for blog and works

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
 		{% include header.html %}
 
-		<div class="container padding--large margin-none">
+		<div class="container padding--lg margin--none">
 			{{ content }}
 		</div>
 
