--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,15 +2,17 @@
 layout: default
 ---
 
-<div class="container--small">
+<div class="container--sm">
 	<div class="u-textCenter">
-		<h1 class="post-title">{{ page.title }}</h1>
-		<h5 class="u-text--center margin-none u-hidden">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</h5>
+		<h1 class="m-page-title">{{ page.title }}</h1>
+		<h5 class="u-text--center margin--none u-hidden">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</h5>
 	</div>
-	
-	{{ content }}
 
-	<div class="u-text--center margin-large margin-bottom">
+	<div class="m-page-content">
+		{{ content }}
+	</div>
+
+	<div class="u-text--center margin--lg margin-bottom">
 		<a class="btn" href="/work/">See more work</a>
 	</div>
 </div>
