--- a/assets/css/my.scss
+++ b/assets/css/my.scss
@@ -23,6 +23,7 @@
 @import 'modules/latestWork';
 @import 'modules/siteNavigation';
 @import 'modules/work';
+@import 'modules/animation';
 
 // Utilities
 @import 'utilities/color';
