--- a/_sass/general/grid.scss
+++ b/_sass/general/grid.scss
@@ -10,7 +10,7 @@
  */
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 .row {
-	margin-top: 0;
+	// margin-top: 0;
 	margin-left: -$rhythm / 2;
 	margin-right: -$rhythm / 2;
 }
