--- a/_sass/modules/heroText.scss
+++ b/_sass/modules/heroText.scss
@@ -46,6 +46,13 @@
 	display: none;
 }
 
+@media (max-width: 1280px) {
+	.m-heroText-title {
+		font-size: 4rem;
+		line-height: 3rem;
+	}
+}
+
 @media (max-width: 1023px) {
 	.m-heroText-hero {
 		> div {
