--- a/_sass/modules/latestWork.scss
+++ b/_sass/modules/latestWork.scss
@@ -1,6 +1,8 @@
 .m-latestWork {
-	position: absolute;
+	max-width: 768px;
+	margin: 0 auto;
 	z-index: 2;
+	position: absolute;
 	left: 0;
 	right: 0;
 	bottom: 0;
@@ -49,14 +51,12 @@
 	}
 }
 
-@media (max-width: 767px) {
+@media (max-width: 1023px) {
 	.m-latestWork {
 		right: 0;
+		max-width: none;
 		padding: $rhythm / 2;
 		padding-bottom: 0;
-	}
-	.m-latestWork-list {
-		background: white;
 	}
 	.m-latestWork-header {
 		margin-left: -$rhythm / 2;
@@ -64,11 +64,23 @@
 		padding-left: $rhythm / 2;
 		padding-right: $rhythm / 2;
 	}
+	.m-latestWork-list {
+		background: white;
+	}
+}
+
+@media (max-width: 767px) {
 	.m-latestWork-item:last-child {
 		display: none;
 	}
 	.m-latestWork-image {
 		width: 5rem;
 		height: 5rem;
+	}
+}
+
+@media (max-height: 400px) {
+	.m-latestWork {
+		display: none;
 	}
 }
