--- a/_sass/utilities/display.scss
+++ b/_sass/utilities/display.scss
@@ -1,9 +1,9 @@
-.u-hidden {
+.hidden {
 	display: none;
 }
 
 @media (max-width: 767px) {
-	.u-hidden--mobile {
+	.hidden--sm {
 		display: none !important;
 	}
 }
