--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
 		</li>
 	</ul>
 
-	<div class="trigger u-hidden">
+	<div class="trigger hidden">
 		{% for page in site.pages %}
 			{% if page.title %}
 			<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
