--- a/_sass/modules/home.scss
+++ b/_sass/modules/home.scss
@@ -58,13 +58,13 @@
 @media (max-width: 1023px) {
 	.m-home-me {
 		width: 50%;
-		bottom: 180px;
+		// bottom: 180px;
 	}
 }
 
 @media (max-width: 767px) {
 	.m-home-me {
-		bottom: 130px;
+		// bottom: 130px;
 	}
 }
 
