fix fallback typography and image 404

--- a/_sass/general/variables.scss
+++ b/_sass/general/variables.scss
@@ -11,8 +11,8 @@ $blue:              #1e92d4;
 // Rhythm
 
 // Typography
-$font_body:         "Soleil";
-$font_header:       "futura-pt", "Futura PT";
+$font_body:         "Soleil", "Roboto", "Segoe UI", "Helvetica Neue", Helvetica, Arial;
+$font_header:       "futura-pt", "Futura PT", "Roboto", "Segoe UI", "Helvetica Neue", Helvetica, Arial;
 $font_size:         18px;
 $line_height:       1.5;
 $font_size--mobile: 15px;
