Improve for desktops

--- a/_sass/modules/work.scss
+++ b/_sass/modules/work.scss
@@ -1,3 +1,8 @@
+.m-work-list {
+	max-width: 1690px;
+	margin-left: auto;
+	margin-right: auto;
+}
 .m-work-item {
 	+ .m-work-item {
 		margin-top: 4rem;
