--- a/_sass/modules/animation.scss
+++ b/_sass/modules/animation.scss
@@ -4,7 +4,8 @@
 .m-animation-4,
 .m-animation-5,
 .m-animation-6,
-.m-animation-7 {
+.m-animation-7,
+.m-animation-header {
 	opacity: 0;
 }
 .m-animation-1 {
@@ -28,7 +29,15 @@
 .m-animation-7 {
 	transition: opacity 3.5s 0.6s;
 }
-.in {
+.m-animation-header {
+	transition: opacity 4s 0.5s;
+}
+.animateHeader--in {
+	.m-animation-header {
+		opacity: 1;
+	}
+}
+.animateBody--in {
 	.m-animation-1,
 	.m-animation-2,
 	.m-animation-3,
