--- a/assets/css/my.scss
+++ b/assets/css/my.scss
@@ -17,6 +17,9 @@
 @import 'components/buttons';
 @import 'components/code';
 
+// Plugins
+@import 'plugins/instantClick';
+
 // Modules
 @import 'modules/heroText';
 @import 'modules/home';
