--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<nav class="m-siteNavigation padding--sm m-animation-7">
+<nav class="m-siteNavigation padding--sm m-animation-header">
 	<a class="m-siteNavigation-logo" href="{{ site.baseurl }}/"></a>
 	<ul class="m-siteNavigation-list u-text--small u-listUnstyled u-listInline">
 		<li>
