--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <nav class="m-siteNavigation padding--sm m-animation-header">
 	<a class="m-siteNavigation-logo" href="{{ site.baseurl }}/"></a>
-	<ul class="m-siteNavigation-list u-text--small u-listUnstyled u-listInline">
+	<ul class="m-siteNavigation-list u-text--small u-listInline">
 		<li>
 			<a class="m-siteNavigation-link {% if page.siteNav == 'home' %}active{% endif %}" href="{{ site.baseurl }}/">Home</a>
 		</li>
