--- a/_sass/general/variables.scss
+++ b/_sass/general/variables.scss
@@ -8,6 +8,10 @@ $gray_lightest:     #cecece;
 $off_white:         #eee;
 $blue:              #1e92d4;
 
+$blue_gray:         #6893ad;
+$purple:            #59384c;
+$blue:              #4e8cb1;
+
 // Rhythm
 
 // Typography
