--- a/_sass/modules/home.scss
+++ b/_sass/modules/home.scss
@@ -12,8 +12,8 @@
 }
 .m-home-me {
 	width: 30%;
-	background: $blue;
-	background: url('/assets/images/home/me.png');
+	background: $black;
+	background-image: url('/assets/images/home/me.png');
 	background-size: cover;
 	background-position: 23% 40%;
 	margin-top: 0;
