--- a/_sass/general/typography.scss
+++ b/_sass/general/typography.scss
@@ -3,6 +3,7 @@ html {
 	font-size: $font_size;
 	line-height: $line_height;
 	color: $black_light;
+	// -webkit-font-smoothing: antialiased;
 }
 h1,
 h2,
