--- a/_sass/utilities/layout.scss
+++ b/_sass/utilities/layout.scss
@@ -13,8 +13,26 @@
 	list-style: none;
 }
 .u-listInline {
+	list-style: none;
+	padding-left: 0;
 	> li {
 		display: inline-block;
 		margin-top: 0;
+	}
+}
+
+// Media
+.u-responsiveMedia {
+	position: relative;
+	padding-bottom: 56.25%;
+	iframe,
+	img {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		width: 100%;
+		height: 100%;
 	}
 }
