add animation, update case study, fix header on mobile

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ body-id: work
 
 <div class="padding--lg margin--none">
 	<div class="container--sm">
-		<div class="u-textCenter">
+		<div class="u-textCenter m-animation-1">
 			<h1 class="m-page-title">{{ page.title }}</h1>
 			<h5 class="u-text--center margin--none hidden">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</h5>
 			<h5 class="u-text--center margin--none">Role: {{ page.role }}</h5>
