--- a/_sass/modules/animation.scss
+++ b/_sass/modules/animation.scss
@@ -5,28 +5,35 @@
 .m-animation-5,
 .m-animation-6,
 .m-animation-7,
+.m-page-content > *,
 .m-animation-header {
 	opacity: 0;
 }
 .m-animation-1 {
 	transition: opacity 1s;
 }
-.m-animation-2 {
+.m-animation-2,
+.m-page-content > *:nth-child(1) {
 	transition: opacity 1.25s 0.1s;
 }
-.m-animation-3 {
+.m-animation-3,
+.m-page-content > *:nth-child(2) {
 	transition: opacity 1.5s 0.2s;
 }
-.m-animation-4 {
+.m-animation-4,
+.m-page-content > *:nth-child(3) {
 	transition: opacity 2s 0.3s;
 }
-.m-animation-5 {
+.m-animation-5,
+.m-page-content > *:nth-child(4) {
 	transition: opacity 2.5s 0.4s;
 }
-.m-animation-6 {
+.m-animation-6,
+.m-page-content > *:nth-child(5) {
 	transition: opacity 3s 0.5s;
 }
-.m-animation-7 {
+.m-animation-7,
+.m-page-content > * {
 	transition: opacity 3.5s 0.6s;
 }
 .m-animation-header {
@@ -44,7 +51,8 @@
 	.m-animation-4,
 	.m-animation-5,
 	.m-animation-6,
-	.m-animation-7 {
+	.m-animation-7,
+	.m-page-content > * {
 		opacity: 1;
 	}
 }
