--- a/_sass/modules/work.scss
+++ b/_sass/modules/work.scss
@@ -19,12 +19,22 @@
 	margin-top: 0;
 	margin-bottom: $rhythm / 4;
 }
+.m-work-link {
+	margin-top: $line_height / 2 * 1em;
+}
 
 @media (max-width: 767px) {
 	.m-work-item {
+		text-align: center;
 		+ .m-work-item {
 			margin-top: 1rem;
 		}
 		padding-bottom: 1rem;
+	}
+	.m-work-image {
+		height: 240px;
+	}
+	.m-work-link {
+		margin-top: 0;
 	}
 }
