--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,4 +1,4 @@
-<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
-<script src="/assets/js/fastclick.js"></script>
+<script src="//code.jquery.com/jquery-2.1.3.min.js" data-no-instant></script>
+<script src="/assets/js/fastclick.js" data-no-instant></script>
 <script src="/assets/js/instantclick.min.js" data-no-instant></script>
-<script src="/assets/js/script.js"></script>
+<script src="/assets/js/script.js" data-no-instant></script>
