--- a/_sass/modules/animation.scss
+++ b/_sass/modules/animation.scss
@@ -9,35 +9,8 @@
 .m-animation-header {
 	opacity: 0;
 }
-.m-animation-1 {
-	transition: opacity 1s;
-}
-.m-animation-2,
-.m-page-content > *:nth-child(1) {
-	transition: opacity 1.25s 0.1s;
-}
-.m-animation-3,
-.m-page-content > *:nth-child(2) {
-	transition: opacity 1.5s 0.2s;
-}
-.m-animation-4,
-.m-page-content > *:nth-child(3) {
-	transition: opacity 2s 0.3s;
-}
-.m-animation-5,
-.m-page-content > *:nth-child(4) {
-	transition: opacity 2.5s 0.4s;
-}
-.m-animation-6,
-.m-page-content > *:nth-child(5) {
-	transition: opacity 3s 0.5s;
-}
-.m-animation-7,
-.m-page-content > * {
-	transition: opacity 3.5s 0.6s;
-}
 .m-animation-header {
-	transition: opacity 4s 0.5s;
+	@include prefix(transition, opacity 4s 0.5s);
 }
 .animateHeader--in {
 	.m-animation-header {
@@ -45,6 +18,33 @@
 	}
 }
 .animateBody--in {
+	.m-animation-1 {
+		@include prefix(transition, opacity 1s);
+	}
+	.m-animation-2,
+	.m-page-content > *:nth-child(1) {
+		@include prefix(transition, opacity 1.25s 0.1s);
+	}
+	.m-animation-3,
+	.m-page-content > *:nth-child(2) {
+		@include prefix(transition, opacity 1.5s 0.2s);
+	}
+	.m-animation-4,
+	.m-page-content > *:nth-child(3) {
+		@include prefix(transition, opacity 2s 0.3s);
+	}
+	.m-animation-5,
+	.m-page-content > *:nth-child(4) {
+		@include prefix(transition, opacity 2.5s 0.4s);
+	}
+	.m-animation-6,
+	.m-page-content > *:nth-child(5) {
+		@include prefix(transition, opacity 3s 0.5s);
+	}
+	.m-animation-7,
+	.m-page-content > * {
+		@include prefix(transition, opacity 3.5s 0.6s);
+	}
 	.m-animation-1,
 	.m-animation-2,
 	.m-animation-3,
