more mobile fixes

--- a/_sass/components/layout.scss
+++ b/_sass/components/layout.scss
@@ -46,7 +46,7 @@
 }
 @media (max-width: 767px) {
 	.padding--lg {
-		padding: $rhythm;
+		padding: $rhythm $rhythm / 2;
 	}
 	.padding,
 	.padding--sm {
