--- a/_sass/components/buttons.scss
+++ b/_sass/components/buttons.scss
@@ -3,6 +3,7 @@
 	font-size: 1.5rem;
 	line-height: 1.1;
 	display: inline-block;
+	white-space: nowrap;
 	color: $blue;
 	border-bottom: 3px solid rgba($blue, 0.5);
 	text-transform: none;
@@ -35,7 +36,7 @@
 .btn-footer {
 	display: block;
 	text-align: center;
-	padding: $rhythm * 5 $rhythm * 2.5;
+	padding: $rhythm * 5 0;
 	background: none;
 	border: none;
 	@include prefix(transition, background 1s);
