mobile css button fix

--- a/_sass/components/buttons.scss
+++ b/_sass/components/buttons.scss
@@ -95,6 +95,7 @@
 @media (max-width: 767px) {
 	.btn {
 		font-size: 1.25rem;
+		line-height: 1.15;
 		border-width: 2px;
 		&:after {
 			-webkit-text-stroke: 4px white;
