minor visual and copy updates

--- a/_sass/components/defaults.scss
+++ b/_sass/components/defaults.scss
@@ -38,3 +38,12 @@ ul {
 		margin-top: $line_height / 4 * 1em;
 	}
 }
+// When selecting a text, it does this:
+::selection {
+    color: white;
+    background: $black; /* WebKit/Blink Browsers */
+}
+::-moz-selection {
+    color: white;
+    background: $black; /* Gecko Browsers */
+}
