--- a/_sass/general/variables.scss
+++ b/_sass/general/variables.scss
@@ -6,11 +6,12 @@ $gray:              #999;
 $gray_light:        #bebebe;
 $gray_lightest:     #cecece;
 $off_white:         #eee;
-$blue:              #1e92d4;
 
-$blue_gray:         #6893ad;
+$yellow:            #fff200;
 $purple:            #59384c;
 $blue:              #4e8cb1;
+$blue_dark:         #326a8c;
+$blue_gray:         #829dad;
 
 // Rhythm
 
