add blockquote and fix broken video

--- a/_sass/general/variables.scss
+++ b/_sass/general/variables.scss
@@ -11,13 +11,15 @@ $yellow:            #fff200;
 $purple:            #59384c;
 $blue:              #4e8cb1;
 $blue_dark:         #326a8c;
-$blue_gray:         #829dad;
+$blue_light:        #829dad;
+$blue_lightest:     #f7f9fa;
 
 // Rhythm
 
 // Typography
 $font_body:         "Soleil", "Roboto", "Segoe UI", "Helvetica Neue", Helvetica, Arial;
 $font_header:       "futura-pt", "Futura PT", "Roboto", "Segoe UI", "Helvetica Neue", Helvetica, Arial;
+$font_serif:        "Charter", Georgia, serif;
 $font_size:         18px;
 $line_height:       1.5;
 $font_size--mobile: 15px;
