--- a/assets/css/my.scss
+++ b/assets/css/my.scss
@@ -21,6 +21,7 @@
 @import 'plugins/instantClick';
 
 // Modules
+@import 'modules/about';
 @import 'modules/blogPost';
 @import 'modules/heroText';
 @import 'modules/home';
