--- a/_sass/general/typography.scss
+++ b/_sass/general/typography.scss
@@ -48,6 +48,17 @@ h5 {
 		margin-top: 0;
 	}
 }
+blockquote {
+	font-family: $font_serif;
+	font-style: italic;
+	font-size: 1.25rem;
+	margin-left: -1.5rem;
+	padding: 0.75rem 1.5rem;
+	background: $blue_lightest;
+	color: $blue_light;
+	border-left: 4px solid $blue_dark;
+	@include clearfix();
+}
 
 @media (max-width: 1023px) {
 	html {
@@ -66,4 +77,25 @@ h5 {
 	h4 {
 		font-size: 1.25rem;
 	}
+	blockquote {
+		margin-left: -0.75rem;
+		margin-right: -0.75rem;
+	}
+}
+
+@font-face {
+    font-family: 'Charter';
+    src: url('/assets/fonts/charter_italic-webfont.eot');
+    src: url('/assets/fonts/charter_italic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/assets/fonts/charter_italic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: italic;
+}
+@font-face {
+    font-family: 'Charter';
+    src: url('/assets/fonts/charter_bold_italic-webfont.eot');
+    src: url('/assets/fonts/charter_bold_italic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/assets/fonts/charter_bold_italic-webfont.woff') format('woff');
+    font-weight: bold;
+    font-style: italic;
 }
