--- a/_includes/me.html
+++ b/_includes/me.html
@@ -5,6 +5,6 @@
 	</div>
 	<div>
 		<p class="m-heroText-paragraph m-animation-3"><br>I’m a product designer based in Sydney.<br class="m-heroText-br"> I turn complex ideas into intuitive, beautiful products.</p>
-		<a class="btn m-animation-4" href="/work" data-text="See my work"></a>
+		<a class="btn m-animation-4 js-cta-seeMyWork" href="/work" data-text="See my work"></a>
 	</div>
 </div>
