--- a/_sass/general/typography.scss
+++ b/_sass/general/typography.scss
@@ -24,8 +24,7 @@ h2 {
 }
 h3 {
 	font-size: 2rem;
-	text-transform: uppercase;
-	font-weight: normal;
+	font-weight: bold;
 	color: $black;
 }
 h4 {
