--- a/_sass/components/buttons.scss
+++ b/_sass/components/buttons.scss
@@ -31,10 +31,16 @@
 		cursor: default;
 		color: $gray;
 		border-color: rgba($gray, 0.5);
+		&:active {
+			top: 0;
+		}
 	}
 	* + & {
 		margin-top: 1.5em;
 	}
+}
+.btn--small {
+	font-size: 1.25rem;
 }
 .btn-footer {
 	display: block;
@@ -100,6 +106,9 @@
 		&:after {
 			-webkit-text-stroke: 4px white;
 		}
+	}
+	.btn--small {
+		font-size: inherit;
 	}
 	.btn-footer {
 		padding: $rhythm * 2 0;
