New homepage, make blog live

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,9 @@
 			<a class="m-siteNavigation-link {% if page.siteNav == 'about' %}active{% endif %}" href="{{ site.baseurl }}/about">About</a>
 		</li>
 		<li>
+			<a class="m-siteNavigation-link {% if page.siteNav == 'blog' %}active{% endif %}" href="{{ site.baseurl }}/design-solutions">Blog</a>
+		</li>
+		<li>
 			<a class="m-siteNavigation-highlight" href="mailto:{{site.email}}">Contact Me</a>
 		</li>
 	</ul>
