--- a/_includes/me.html
+++ b/_includes/me.html
@@ -1,10 +1,10 @@
-<div class="m-heroText-hero m-heroText-hero--home row js-verticalAlign">
+<div class="m-heroText-hero row">
 	<div>
 		<p class="m-heroText-hello m-animation-1">Hi, I'm</p>
 		<h1 class="m-heroText-title m-animation-2">Morgan Carter</h1>
 	</div>
 	<div>
-		<p class="m-heroText-paragraph m-animation-3"><br>I’m a freelance product designer.<br> I turn complex ideas into intuitive, beautiful products.</p>
-		<a class="btn m-animation-4 js-cta-seeMyWork" href="/work" data-text="See my work"></a>
+		<p class="m-heroText-paragraph m-animation-3">I’m a freelance product designer. I turn complex ideas into intuitive, beautiful products.</p>
+		<!-- <a class="btn m-animation-4 js-cta-seeMyWork" href="/work" data-text="See my work"></a> -->
 	</div>
 </div>
