--- a/_sass/modules/latestWork.scss
+++ b/_sass/modules/latestWork.scss
@@ -1,16 +1,30 @@
+.m-latestWork-wrapper {
+	max-width: 880px;
+	margin: 5% auto 0;
+	@include clearfix();
+}
 .m-latestWork {
-	max-width: 768px;
-	margin: 0 auto;
-	z-index: 2;
-	position: absolute;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	padding: $rhythm;
+	width: 50%;
+	float: left;
+	margin-top: 0;
 }
 .m-latestWork-header {
-	color: $gray_light;
+	position: relative;
 	border-bottom: 2px solid $gray_lightest;
+	line-height: 1;
+}
+.m-latestWork-title {
+	color: $gray_light;
+}
+.m-latestWork-more {
+	position: absolute;
+	right: 0;
+	bottom: -1px;
+	color: $gray_light;
+	border-bottom: none;
+	&:active {
+		top: auto;
+	}
 }
 .m-latestWork-work {
 	display: block;
@@ -42,45 +56,26 @@
 	color: $gray;
 }
 
-@media (max-width: 1080px) {
-	.m-latestWork {
-		right: 33%;
-	}
-	.m-latestWork-header {
-		margin-right: -$rhythm;
-	}
-}
-
 @media (max-width: 1023px) {
-	.m-latestWork {
-		right: 0;
-		max-width: none;
-		padding: $rhythm / 2;
-		padding-bottom: 0;
-	}
-	.m-latestWork-header {
-		margin-left: -$rhythm / 2;
-		margin-right: -$rhythm / 2;
-		padding-left: $rhythm / 2;
-		padding-right: $rhythm / 2;
-	}
 	.m-latestWork-list {
 		background: white;
+	}
+	.m-latestWork-more {
+		bottom: 0;
 	}
 }
 
 @media (max-width: 767px) {
-	.m-latestWork-item:last-child {
-		display: none;
-	}
-	.m-latestWork-image {
-		width: 5rem;
-		height: 5rem;
+	.m-latestWork-wrapper {
+		margin-top: $rhythm;
+		margin-left: -$rhythm / 2;
+		margin-right: -$rhythm / 2;
 	}
 }
 
-@media (max-height: 400px) {
+@media (max-width: 568px) {
 	.m-latestWork {
-		display: none;
+		width: 100%;
+		float: none;
 	}
 }
