--- a/_sass/general/variables.scss
+++ b/_sass/general/variables.scss
@@ -8,7 +8,7 @@ $gray_lightest:     #cecece;
 $off_white:         #eee;
 
 $yellow:            #fff200;
-$purple:            #59384c;
+$purple:            #675f87;
 $blue:              #4e8cb1;
 $blue_dark:         #326a8c;
 $blue_light:        #829dad;
