--- a/_sass/components/buttons.scss
+++ b/_sass/components/buttons.scss
@@ -7,8 +7,9 @@
 	color: $blue;
 	border-bottom: 3px solid rgba($blue, 0.5);
 	text-transform: none;
-	&:hover {
-		border-color: $blue;
+	.no-touch &:hover,
+	.touch &:active {
+		border-color: initial;
 	}
 	&:before,
 	&:after {
@@ -26,11 +27,15 @@
 		color: transparent;
 		-webkit-text-stroke: 5px white;
 	}
+	&:visited {
+		color: $purple;
+		border-color: rgba($purple, 0.5);
+	}
 	&[disabled],
 	&.disabled {
 		cursor: default;
 		color: $gray;
-		border-color: rgba($gray, 0.5);
+		border-color: rgba($gray, 0.5) !important;
 		&:active {
 			top: 0;
 		}
