--- a/_sass/modules/blogPost.scss
+++ b/_sass/modules/blogPost.scss
@@ -1,23 +1,3 @@
-.m-page-title {
-	
-}
-.m-blogPost-imageCompare {
-	position: relative;
-	img:last-child {
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		margin-top: 0;
-		display: none;
-	}
-	&:hover {
-		img:last-child {
-			display: block;
-		}
-	}
-}
 .m-blogPost-link {
 	display: table;
 	width: 100%;
@@ -26,8 +6,19 @@
 		display: table-cell;
 		vertical-align: top;
 	}
-	&:hover .btn {
+	.no-touch &:hover .btn,
+	.touch &:active .btn {
 		border-color: $blue;
+	}
+	&:visited {
+		.btn {
+			color: $purple;
+			border-color: rgba($purple, 0.5);
+		}
+		.no-touch &:hover .btn,
+		.touch &:active .btn {
+			border-color: $purple;
+		}
 	}
 }
 .m-blogPost-image {
