--- a/assets/css/my.scss
+++ b/assets/css/my.scss
@@ -16,6 +16,7 @@
 @import 'components/defaults';
 @import 'components/buttons';
 @import 'components/code';
+@import 'components/input';
 
 // Plugins
 @import 'plugins/instantClick';
