--- a/_sass/modules/blogPost.scss
+++ b/_sass/modules/blogPost.scss
@@ -2,6 +2,7 @@
 	display: table;
 	width: 100%;
 	border-bottom: none;
+	line-height: inherit;
 	> * {
 		display: table-cell;
 		vertical-align: top;
